--- a/config/apextoolgroup/default/core.entity_view_display.paragraph.careers_cta.default.yml
+++ b/config/apextoolgroup/default/core.entity_view_display.paragraph.careers_cta.default.yml
@@ -1,4 +1,4 @@
-uuid: 6d569a03-9164-4659-9cfd-ac32d83940cc
+uuid: c506ee0a-b635-461e-8fa8-acad9eab58ea
 langcode: en
 status: true
 dependencies:
@@ -14,7 +14,7 @@ mode: default
 content:
   field_link:
     type: link
-    label: above
+    label: hidden
     settings:
       trim_length: 80
       url_only: false
