--- a/config/apextoolgroup/default/field.field.paragraph.careers_cta.field_link.yml
+++ b/config/apextoolgroup/default/field.field.paragraph.careers_cta.field_link.yml
@@ -1,4 +1,4 @@
-uuid: f8528019-6a20-4bdc-bbdf-a29ace87a6e0
+uuid: e6b59de9-4955-42de-be79-363c8549bc3c
 langcode: en
 status: true
 dependencies:
@@ -11,7 +11,7 @@ id: paragraph.careers_cta.field_link
 field_name: field_link
 entity_type: paragraph
 bundle: careers_cta
-label: 'CTA for Careers'
+label: CTA
 description: ''
 required: false
 translatable: true
