APEX-240: Careers banner configuration

--- a/config/apextoolgroup/default/block.block.bannercareers.yml
+++ b/config/apextoolgroup/default/block.block.bannercareers.yml
@@ -1,11 +1,11 @@
-uuid: 7a171c67-4e07-47d7-8111-6fde1ff4fe6d
+uuid: 990e6e7c-550d-4e7e-95ea-0ae5368ddc94
 langcode: en
 status: true
 dependencies:
-  content:
-    - 'block_content:hero_image:c79a4648-3690-4892-86d3-56aae811acb8'
+  config:
+    - fixed_block_content.fixed_block_content.banner_careers
   module:
-    - block_content
+    - fixed_block_content
     - system
   theme:
     - apextoolgroup
@@ -14,15 +14,13 @@ theme: apextoolgroup
 region: pre_content
 weight: -6
 provider: null
-plugin: 'block_content:c79a4648-3690-4892-86d3-56aae811acb8'
+plugin: 'fixed_block_content:banner_careers'
 settings:
-  id: 'block_content:c79a4648-3690-4892-86d3-56aae811acb8'
+  id: 'fixed_block_content:banner_careers'
   label: 'Banner - Careers'
   label_display: '0'
-  provider: block_content
-  status: true
-  info: ''
-  view_mode: full
+  provider: fixed_block_content
+  view_mode: ''
 visibility:
   request_path:
     id: request_path
