--- a/config/apextoolgroup/default/views.view.atg_news.yml
+++ b/config/apextoolgroup/default/views.view.atg_news.yml
@@ -1084,7 +1084,7 @@ display:
       path: newsroom
       menu:
         type: 'default tab'
-        title: 'ATG in the news'
+        title: 'ATG in the News'
         description: ''
         weight: 0
         expanded: false
@@ -1468,7 +1468,7 @@ display:
             max_length: 300
             word_boundary: true
             ellipsis: true
-            more_link: true
+            more_link: false
             more_link_text: 'Read More'
             more_link_path: '{{ view_node }}'
             strip_tags: true
@@ -1636,7 +1636,7 @@ display:
       path: newsroom/atg-news-release
       menu:
         type: tab
-        title: 'ATG news release'
+        title: 'News Releases'
         description: ''
         weight: 0
         expanded: false
