--- a/config/apextoolgroup/default/core.entity_view_display.paragraph.info_section.default.yml
+++ b/config/apextoolgroup/default/core.entity_view_display.paragraph.info_section.default.yml
@@ -18,7 +18,7 @@ mode: default
 content:
   field_attribution:
     type: string
-    label: above
+    label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
@@ -26,7 +26,7 @@ content:
     region: content
   field_class_custom:
     type: string
-    label: above
+    label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
@@ -34,7 +34,7 @@ content:
     region: content
   field_image_background:
     type: image
-    label: above
+    label: hidden
     settings:
       image_link: ''
       image_style: ''
@@ -45,7 +45,7 @@ content:
     region: content
   field_link:
     type: link
-    label: above
+    label: hidden
     settings:
       trim_length: 80
       url_only: false
