--- a/config/apextoolgroup/default/field.field.block_content.atg_glance.field_title.yml
+++ b/config/apextoolgroup/default/field.field.block_content.atg_glance.field_title.yml
@@ -1,15 +1,15 @@
-uuid: 48b84b85-7786-44a1-a456-c7b841825816
+uuid: d5ae5464-411c-4c02-bc91-87b74749b2c9
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_title
-    - paragraphs.paragraphs_type.atg_glance
-id: paragraph.atg_glance.field_title
+    - block_content.type.atg_glance
+    - field.storage.block_content.field_title
+id: block_content.atg_glance.field_title
 field_name: field_title
-entity_type: paragraph
+entity_type: block_content
 bundle: atg_glance
-label: Title
+label: Heading
 description: ''
 required: false
 translatable: true
