--- a/config/apextoolgroup/default/views.view.employee_gallery.yml
+++ b/config/apextoolgroup/default/views.view.employee_gallery.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.storage.node.body
     - field.storage.node.field_employee_designation
     - field.storage.node.field_employee_photo
+    - field.storage.node.field_short_description
     - node.type.employee_profile
     - taxonomy.vocabulary.employee_type
   content:
@@ -267,6 +268,68 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
+        field_short_description:
+          id: field_short_description
+          table: node__field_short_description
+          field: field_short_description
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: field
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: text_default
+          settings: {  }
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
       pager:
         type: none
         options:
@@ -416,6 +479,7 @@ display:
         - 'config:field.storage.node.body'
         - 'config:field.storage.node.field_employee_designation'
         - 'config:field.storage.node.field_employee_photo'
+        - 'config:field.storage.node.field_short_description'
   board_of_directors:
     id: board_of_directors
     display_title: 'Board of Directors'
@@ -518,6 +582,7 @@ display:
         - 'config:field.storage.node.body'
         - 'config:field.storage.node.field_employee_designation'
         - 'config:field.storage.node.field_employee_photo'
+        - 'config:field.storage.node.field_short_description'
   management:
     id: management
     display_title: Management
@@ -539,3 +604,4 @@ display:
         - 'config:field.storage.node.body'
         - 'config:field.storage.node.field_employee_designation'
         - 'config:field.storage.node.field_employee_photo'
+        - 'config:field.storage.node.field_short_description'
