--- a/config/gearwrench_au/default/core.entity_view_display.node.product.set_listing.yml
+++ b/config/gearwrench_au/default/core.entity_view_display.node.product.set_listing.yml
@@ -19,6 +19,7 @@ dependencies:
     - field.field.node.product.field_product_images
     - field.field.node.product.field_product_specifications
     - field.field.node.product.field_related_products
+    - field.field.node.product.field_rrp
     - field.field.node.product.field_set
     - field.field.node.product.field_set_components
     - field.field.node.product.field_sku_group
@@ -54,6 +55,7 @@ hidden:
   field_product_images: true
   field_product_specifications: true
   field_related_products: true
+  field_rrp: true
   field_set: true
   field_set_components: true
   field_sku_group: true
