--- a/config/gearwrench_au/default/core.entity_view_display.node.product.default.yml
+++ b/config/gearwrench_au/default/core.entity_view_display.node.product.default.yml
@@ -18,6 +18,7 @@ dependencies:
     - field.field.node.product.field_product_images
     - field.field.node.product.field_product_specifications
     - field.field.node.product.field_related_products
+    - field.field.node.product.field_rrp
     - field.field.node.product.field_set
     - field.field.node.product.field_set_components
     - field.field.node.product.field_sku_group
@@ -45,6 +46,17 @@ content:
       link: false
     third_party_settings: {  }
     weight: 2
+    region: content
+  field_rrp:
+    type: number_decimal
+    label: above
+    settings:
+      thousand_separator: ''
+      decimal_separator: .
+      scale: 2
+      prefix_suffix: true
+    third_party_settings: {  }
+    weight: 3
     region: content
 hidden:
   body: true
