--- a/config/gearwrench_au/default/core.entity_view_display.node.product.full.yml
+++ b/config/gearwrench_au/default/core.entity_view_display.node.product.full.yml
@@ -19,6 +19,7 @@ dependencies:
     - field.field.node.product.field_product_images
     - field.field.node.product.field_product_specifications
     - field.field.node.product.field_related_products
+    - field.field.node.product.field_rrp
     - field.field.node.product.field_set
     - field.field.node.product.field_set_components
     - field.field.node.product.field_sku_group
@@ -92,6 +93,7 @@ hidden:
   field_pdfs: true
   field_product_classifications: true
   field_related_products: true
+  field_rrp: true
   field_set: true
   field_sku_group: true
   field_upc: true
