--- a/config/gearwrench_au/default/system.site.yml
+++ b/config/gearwrench_au/default/system.site.yml
@@ -7,7 +7,7 @@ mail: no-reply@gearwrench.com.au
 slogan: ''
 page:
   403: ''
-  404: ''
+  404: /node/22306
   front: /node/1
 admin_compact_mode: false
 weight_select_max: 100
