APEX-250: Image style created for text and image content

--- a/config/apextoolgroup/default/core.entity_view_display.paragraph.image_and_text.default.yml
+++ b/config/apextoolgroup/default/core.entity_view_display.paragraph.image_and_text.default.yml
@@ -8,8 +8,10 @@ dependencies:
     - field.field.paragraph.image_and_text.field_featured_image
     - field.field.paragraph.image_and_text.field_headline
     - field.field.paragraph.image_and_text.field_small_featured_image
+    - image.style.image_436x272
     - paragraphs.paragraphs_type.image_and_text
   module:
+    - media
     - options
     - text
 id: paragraph.image_and_text.default
@@ -32,11 +34,13 @@ content:
     weight: 4
     region: content
   field_featured_image:
-    type: entity_reference_entity_view
+    type: media_thumbnail
     label: hidden
     settings:
-      view_mode: embed
-      link: false
+      image_link: ''
+      image_style: image_436x272
+      image_loading:
+        attribute: lazy
     third_party_settings: {  }
     weight: 0
     region: content
