--- a/config/apextoolgroup/default/user.role.anonymous.yml
+++ b/config/apextoolgroup/default/user.role.anonymous.yml
@@ -8,6 +8,7 @@ dependencies:
     - filter
     - media
     - search
+    - sitemap
     - system
 _core:
   default_config_hash: JrtDp8Iu4bDYXyEa3b0ibCCP9Lcj-px3BRoEOpg85_Q
@@ -19,6 +20,7 @@ permissions:
   - 'access comments'
   - 'access content'
   - 'access site-wide contact form'
+  - 'access sitemap'
   - 'search content'
   - 'use text format restricted_html'
   - 'view media'
