--- a/config/apextoolgroup/default/webform.webform.product_suggestion_agreement.yml
+++ b/config/apextoolgroup/default/webform.webform.product_suggestion_agreement.yml
@@ -207,8 +207,8 @@ settings:
   draft_loaded_message: ''
   draft_pending_single_message: ''
   draft_pending_multiple_message: ''
-  confirmation_type: inline
-  confirmation_url: /about/contact-us/submission
+  confirmation_type: url
+  confirmation_url: /product-suggestion-thankyou
   confirmation_title: 'Contact Us'
   confirmation_message: "<h2>Product Suggestion Agreement</h2>\r\nThank you for your submission!<br />\r\n<br />\r\nWe have received your Inventor Connect application form and it will be reviewed by our product development team. If there is any interest in proceeding, we will contact you using the information you provided in your application.<br />\r\n<br />\r\nNote: Please do not attempt to submit marketing, sales, or other materials related to your submission or other ideas. We only accept idea submissions via the Inventor Connect portal and only review the criteria requested, i.e. published patent applications or granted patents.<br />\r\n<br />\r\nApex Tool Group, LLC All Rights Reserved"
   confirmation_attributes:
