--- a/config/apextoolgroup/default/webform.webform.contact_us.yml
+++ b/config/apextoolgroup/default/webform.webform.contact_us.yml
@@ -16,15 +16,60 @@ elements: |-
   select_type:
     '#type': radios
     '#title': 'Select Type'
+    '#description': 'PLEASE NOTE: “Website Feedback” selection DOES NOT go to Customer Service, please make another selection for questions or comments not related to the website itself.'
     '#options':
       'Become a Distributor': 'Become a Distributor'
+      'Become a Supplier': 'Become a Supplier'
       'Product Feedback': 'Product Feedback'
       'Product Technical Question': 'Product Technical Question'
       'Warranty/Replacement Parts/Repair': 'Warranty/Replacement Parts/Repair'
       'Sales Quote': 'Sales Quote'
-      'Add/Adjust Your Location Information': 'Add/Adjust Your Location Information'
+      'Website Feedback': 'Website Feedback'
     '#required': true
     '#required_error': 'Select Type field is required.'
+  product_brand:
+    '#type': select
+    '#title': 'Product Brand'
+    '#options':
+      Airetool®: Airetool®
+      Allen®: Allen®
+      Apex®: Apex®
+      Armstrong®: Armstrong®
+      Belzer®: Belzer®
+      Campbell®: Campbell®
+      Cleco®: Cleco®
+      Crescent®: Crescent®
+      Delta®: Delta®
+      DGD®: DGD®
+      Diamond®: Diamond®
+      Dotco®: Dotco®
+      Erem®: Erem®
+      GearWrench®: GearWrench®
+      'H.K. Porter®': 'H.K. Porter®'
+      Jacobs®: Jacobs®
+      JOBOX®: JOBOX®
+      'K&F®': 'K&F®'
+      Lufkin®: Lufkin®
+      'Master Power®': 'Master Power®'
+      MAYLE®: MAYLE®
+      Metronix®: Metronix®
+      Nicholson®: Nicholson®
+      Plumb®: Plumb®
+      Quackenbush®: Quackenbush®
+      Recoules®: Recoules®
+      SATA®: SATA®
+      Utica®: Utica®
+      Weller®: Weller®
+      Wiss®: Wiss®
+      Xcelite®: Xcelite®
+    '#empty_option': ' '
+    '#required': true
+    '#required_error': 'Product Brand field is required'
+    '#states':
+      visible:
+        ':input[name="select_type"]':
+          value:
+            pattern: '(Product Feedback|Product Technical Question|Warranty/Replacement Parts/Repair)'
   brand:
     '#type': textfield
     '#title': Brand
@@ -44,6 +89,16 @@ elements: |-
         ':input[name="select_type"]':
           value:
             pattern: '(Product Feedback|Product Technical Question|Warranty/Replacement Parts/Repair)'
+  type_of_supplies:
+    '#type': textfield
+    '#title': 'Type of Supplies'
+    '#required': true
+    '#required_error': 'Type of Supplies field is required'
+    '#states':
+      visible:
+        ':input[name="select_type"]':
+          value:
+            pattern: '(Become a Supplier)'
   business_name:
     '#type': textfield
     '#title': 'Business Name'
@@ -51,7 +106,7 @@ elements: |-
       visible:
         ':input[name="select_type"]':
           value:
-            pattern: '(Become a Distributor|Product Feedback|Product Technical Question|Sales Quote|Warranty/Replacement Parts/Repair|Add/Adjust Your Location Information|)'
+            pattern: '(Become a Distributor|Product Feedback|Product Technical Question|Sales Quote|Warranty/Replacement Parts/Repair|Add/Adjust Your Location Information| Website Feedback|)'
   name:
     '#type': textfield
     '#title': Name
@@ -61,7 +116,7 @@ elements: |-
       visible:
         ':input[name="select_type"]':
           value:
-            pattern: '(Become a Distributor|Product Feedback|Product Technical Question|Sales Quote|Warranty/Replacement Parts/Repair|Add/Adjust Your Location Information|)'
+            pattern: '(Become a Distributor|Product Feedback|Product Technical Question|Sales Quote|Warranty/Replacement Parts/Repair|Add/Adjust Your Location Information| Website Feedback|)'
   email_address:
     '#type': email
     '#title': 'Email Address'
@@ -71,7 +126,7 @@ elements: |-
       visible:
         ':input[name="select_type"]':
           value:
-            pattern: '(Become a Distributor|Product Feedback|Product Technical Question|Sales Quote|Warranty/Replacement Parts/Repair|Add/Adjust Your Location Information|)'
+            pattern: '(Become a Distributor|Product Feedback|Product Technical Question|Sales Quote|Warranty/Replacement Parts/Repair|Add/Adjust Your Location Information| Website Feedback|)'
   phone_number:
     '#type': textfield
     '#title': 'Phone Number'
@@ -81,7 +136,7 @@ elements: |-
       visible:
         ':input[name="select_type"]':
           value:
-            pattern: '(Become a Distributor|Product Feedback|Product Technical Question|Sales Quote|Warranty/Replacement Parts/Repair|Add/Adjust Your Location Information|)'
+            pattern: '(Become a Distributor|Product Feedback|Product Technical Question|Sales Quote|Warranty/Replacement Parts/Repair|Add/Adjust Your Location Information| Website Feedback|)'
   postal_code:
     '#type': textfield
     '#title': 'Postal Code'
@@ -89,6 +144,7 @@ elements: |-
     '#type': select
     '#title': Country
     '#options': country_names
+    '#empty_option': ' '
     '#required': true
     '#required_error': 'Country field is required.'
   address_actual:
@@ -105,6 +161,7 @@ elements: |-
     '#type': select
     '#title': State/Province
     '#options': state_province_names
+    '#empty_option': ' '
     '#required': true
     '#required_error': 'State/Province field is required.'
     '#states':
@@ -129,28 +186,7 @@ elements: |-
       visible:
         ':input[name="select_type"]':
           value:
-            pattern: '(Become a Distributor|Product Feedback|Product Technical Question|Sales Quote|Warranty/Replacement Parts/Repair|Add/Adjust Your Location Information|)'
-  upload_an_excel_document:
-    '#type': managed_file
-    '#title': 'Upload an excel document'
-    '#required': true
-    '#required_error': 'You have selected an option to attach the document(Add/Adjust Your Location Information) but no file is attached, Please attach '
-    '#states':
-      visible:
-        ':input[name="select_type"]':
-          value: 'Add/Adjust Your Location Information'
-    '#file_help': none
-    '#max_filesize': '100'
-    '#file_extensions': 'xls xlsx'
-  processed_text:
-    '#type': processed_text
-    '#states':
-      visible:
-        ':input[name="select_type"]':
-          value: 'Add/Adjust Your Location Information'
-    '#text': |
-      <p><a href="/sites/campbell/files/2023-03/Site-Where-To-Buy-Locations-Template.xlsx" target="_blank">Download Sample Template</a></p>
-    '#format': full_html
+            pattern: '(Become a Distributor|Product Feedback|Product Technical Question|Sales Quote|Warranty/Replacement Parts/Repair|Add/Adjust Your Location Information| Website Feedback|)'
   captcha:
     '#type': captcha
     '#captcha_type': recaptcha/reCAPTCHA
