--- a/config/apextoolgroup/default/core.entity_form_display.node.employee_profile.default.yml
+++ b/config/apextoolgroup/default/core.entity_form_display.node.employee_profile.default.yml
@@ -38,14 +38,10 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_employee_designation:
-    type: entity_reference_autocomplete
+    type: options_select
     weight: 124
     region: content
-    settings:
-      match_operator: CONTAINS
-      match_limit: 10
-      size: 60
-      placeholder: ''
+    settings: {  }
     third_party_settings: {  }
   field_employee_photo:
     type: media_library_widget
@@ -55,14 +51,10 @@ content:
       media_types: {  }
     third_party_settings: {  }
   field_employee_type:
-    type: entity_reference_autocomplete
+    type: options_select
     weight: 125
     region: content
-    settings:
-      match_operator: CONTAINS
-      match_limit: 10
-      size: 60
-      placeholder: ''
+    settings: {  }
     third_party_settings: {  }
   field_mail_address:
     type: email_default
