APEX-528: Password policy

--- a/config/apextoolgroup/default/core.entity_view_display.user.user.compact.yml
+++ b/config/apextoolgroup/default/core.entity_view_display.user.user.compact.yml
@@ -4,6 +4,9 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.user.compact
+    - field.field.user.user.field_last_password_reset
+    - field.field.user.user.field_password_expiration
+    - field.field.user.user.field_pending_expire_sent
     - field.field.user.user.user_picture
     - image.style.thumbnail
   module:
@@ -28,6 +31,9 @@ content:
     weight: 0
     region: content
 hidden:
+  field_last_password_reset: true
+  field_password_expiration: true
+  field_pending_expire_sent: true
   langcode: true
   member_for: true
   search_api_excerpt: true
