--- a/config/apextoolgroup/default/core.extension.yml
+++ b/config/apextoolgroup/default/core.extension.yml
@@ -104,6 +104,8 @@ module:
   options: 0
   page_cache: 0
   paragraphs_component_field: 0
+  password_policy_character_types: 0
+  password_policy_length: 0
   path: 0
   path_alias: 0
   path_redirect_import: 0
@@ -148,6 +150,7 @@ module:
   webform_ui: 0
   limited_field_widgets: 1
   pathauto: 1
+  password_policy: 10
   views: 10
   paragraphs: 11
   blackbird: 1000
