migration module settings

--- a/config/apex-tools/default/migrate_plus.migration.at_products.yml
+++ b/config/apex-tools/default/migrate_plus.migration.at_products.yml
@@ -1,9 +1,9 @@
-uuid: a72b675f-2b7f-470a-8b38-13d94c86cf14
+uuid: 8c92aebe-745f-4a2f-b515-cea365117048
 langcode: en
 status: true
 dependencies: {  }
 _core:
-  default_config_hash: '-zX-UfmvUYGB4NhPfegk-Z8NSR8I62fxOHvlIZpowrs'
+  default_config_hash: lwSJ8tq13U_g00-W03NjCtbniW0StW0O7fEKFrFRZDw
 id: at_products
 class: null
 field_plugin_method: null
@@ -171,6 +171,7 @@ process:
     asset_type:
       - 'Beauty-Glamour Image'
       - SecondaryImage
+      - 'Dimensional Diagram'
     langcode: en
   status:
     plugin: at_map_product_status
