--- a/config/apex-tools/default/migrate_plus.migration.at_products_gb.yml
+++ b/config/apex-tools/default/migrate_plus.migration.at_products_gb.yml
@@ -1,9 +1,9 @@
-uuid: ceb046cb-d974-4e66-b2ec-3a35dbbef2f9
+uuid: 651c2fc6-1273-4635-907b-234cefe52df4
 langcode: en
 status: true
 dependencies: {  }
 _core:
-  default_config_hash: NrmCeV2LOHQtEeIAdpiJ6kmj5zup57Fq-kVONFH9S1U
+  default_config_hash: _lfKBw2aUmNmueG2BOg3fICt8hZzZ-LfDCP6Xt1VeDw
 id: at_products_gb
 class: null
 field_plugin_method: null
@@ -171,6 +171,7 @@ process:
     asset_type:
       - 'Beauty-Glamour Image'
       - SecondaryImage
+      - 'Dimensional Diagram'
     langcode: gb
   status:
     plugin: at_map_product_status
