--- a/docroot/modules/custom/at_migrations/config/install/migrate_plus.migration.at_products.yml
+++ b/docroot/modules/custom/at_migrations/config/install/migrate_plus.migration.at_products.yml
@@ -167,6 +167,7 @@ process:
     asset_type:
       - Beauty-Glamour Image
       - SecondaryImage
+      - Dimensional Diagram
     langcode: en
 
   status:
