--- a/config/apex-tools/default/migrate_plus.migration.at_products_de.yml
+++ b/config/apex-tools/default/migrate_plus.migration.at_products_de.yml
@@ -1,9 +1,9 @@
-uuid: 0878efbc-e432-4746-8568-892b8df997a6
+uuid: 7eb6a0d6-2b30-4e4c-b0c9-d95fdf712e77
 langcode: en
 status: true
 dependencies: {  }
 _core:
-  default_config_hash: 7Mf2wzJJqaIUN1H-0RBLIW3AzfXAWw2PwPgVztDCH6M
+  default_config_hash: oJ1X2TTWHiNvG0IjeRP1w76R7dOQjZqfGsU4XkCUzU4
 id: at_products_de
 class: null
 field_plugin_method: null
@@ -171,6 +171,7 @@ process:
     asset_type:
       - 'Beauty-Glamour Image'
       - SecondaryImage
+      - 'Dimensional Diagram'
     langcode: de
   status:
     plugin: at_map_product_status
