--- a/config/apextoolgroup/default/block.block.womenintoolsbanner.yml
+++ b/config/apextoolgroup/default/block.block.womenintoolsbanner.yml
@@ -1,23 +1,23 @@
-uuid: da4771ae-2207-4edb-8cb0-e274ddfc861b
+uuid: 339929f6-b693-4d68-859f-bc978d43d857
 langcode: en
 status: true
 dependencies:
   config:
-    - fixed_block_content.fixed_block_content.news_page_top_section
+    - fixed_block_content.fixed_block_content.women_in_tools_banner
   module:
     - fixed_block_content
     - system
   theme:
     - apextoolgroup
-id: newspagetopsection
+id: womenintoolsbanner
 theme: apextoolgroup
 region: pre_content
-weight: -13
+weight: -10
 provider: null
-plugin: 'fixed_block_content:news_page_top_section'
+plugin: 'fixed_block_content:women_in_tools_banner'
 settings:
-  id: 'fixed_block_content:news_page_top_section'
-  label: 'News page top section'
+  id: 'fixed_block_content:women_in_tools_banner'
+  label: 'Women in Tools Banner'
   label_display: '0'
   provider: fixed_block_content
   view_mode: ''
@@ -25,4 +25,4 @@ visibility:
   request_path:
     id: request_path
     negate: false
-    pages: "/newsroom/*\r\n/newsroom"
+    pages: /womenintools
